# intcpt

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: c-cpp.yml
src/: Makefile.am  main.c  tracer.c
